tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/string/multiline-no-close-2.stderr
TOML parse error at line 1, column 7
  |
1 | x="""
  |       ^
invalid multiline basic string
